--- a/Curso_Frontend/Web_Pages_Origamid/css/style.css
+++ b/Curso_Frontend/Web_Pages_Origamid/css/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  margin: 50px;
+  margin: 40px;
   color: #000;
 }
 
@@ -73,4 +73,123 @@ body {
   padding: 10px;
   border-radius: 4px;
   text-decoration: none;
+}
+
+/*tag img */
+img {
+  max-width: 100%;
+  display: block;
+}
+.foto_300 {
+  width: 200px;
+}
+
+/*margin e padding */
+
+span {
+  display: inline-block;
+  background-color: #b2b2b2;
+}
+span {
+  padding: 30px;
+  padding: 30px 25px;
+  padding: 90px 105px 30px 125px;
+  border: 10px solid black;
+}
+span {
+  margin: 30px;
+  margin: 30px 25px;
+  margin: 90px 105px 30px 125px;
+}
+
+/*display grid*/
+
+/* h1 {
+  text-align: center;
+}
+ */
+
+h2 {
+  margin-top: 0px;
+}
+
+.item {
+  background-color: #f9f9f9;
+  border: 1px solid #e7e7e7;
+  padding: 20px;
+  border-radius: 4px;
+  display: grid;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  gap: 20px;
+}
+
+/* Bikcraft 01 */
+
+.grid_column {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr;
+  /* align-items: center;*/
+  /* justify-items: end; */
+}
+
+.foto {
+  /* grid-column: 1 / 3; */
+}
+
+.titulo {
+  grid-column: 2;
+  text-align: right;
+}
+
+.preco {
+  background-color: #ddd;
+  padding: 5px 10px;
+  border-radius: 4px;
+  place-self: start end;
+}
+
+.descricao {
+  /* grid-column: 1 / 3; */
+  text-align: end;
+}
+
+.comprar {
+  background-color: #a8f;
+  color: #103;
+  border: 2px solid rebeccapurple;
+  border-radius: 4px;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 20px;
+  /* grid-column: 1 / 3;
+ */
+  place-self: start end;
+  text-align: center;
+}
+
+/*Estilos Gerais */
+
+h1,
+p {
+  margin: 0;
+}
+
+h1 {
+  font-size: 48px;
+  line-height: 1;
+}
+
+img {
+  max-width: 100%;
+  border-radius: 4px;
+}
+p,
+spam {
+  font-size: 20px;
 }
