--- a/Curso_Frontend/Web_Pages_Origamid/css/style.css
+++ b/Curso_Frontend/Web_Pages_Origamid/css/style.css
@@ -133,32 +133,34 @@ h2 {
 .grid_column {
   display: grid;
   gap: 20px;
-  grid-template-columns: 1fr 1fr;
-  /* align-items: center;*/
-  /* justify-items: end; */
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.foto {
-  /* grid-column: 1 / 3; */
+.info {
+  place-self: center;
+  display: grid;
+  place-items: start;
+  gap: 20px;
 }
-
 .titulo {
-  grid-column: 2;
-  text-align: right;
+  grid-column: 1 / -1; /*ocupa toda linha 1 em 100% do tamanho*/
+  /* text-align: right;  */
+  /* text-align: start;
+ */
 }
 
 .preco {
   background-color: #ddd;
   padding: 5px 10px;
   border-radius: 4px;
-  place-self: start end;
+  /*grid-column: 1; /* coluna 1 */
+  /*grid-row: 4; /* linha 4*/
 }
 
 .descricao {
-  /* grid-column: 1 / 3; */
-  text-align: end;
+  /* grid-column: 1 / 3;
+  text-align: end;*/
 }
-
 .comprar {
   background-color: #a8f;
   color: #103;
@@ -167,10 +169,6 @@ h2 {
   padding: 10px 20px;
   text-decoration: none;
   font-size: 20px;
-  /* grid-column: 1 / 3;
- */
-  place-self: start end;
-  text-align: center;
 }
 
 /*Estilos Gerais */
